--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -1,1 +1,103 @@
-<footer></footer>
+<footer class="footer">
+   <div class="footer__container">
+      <div class="footer__body">
+         <div class="footer__row">
+            <div class="footer__items item-footer menu-footer">
+               <div class="item-footer__row">
+                  <div class="item-footer__body body-item-footer">
+                     <div class="body-item-footer__tittle toggle-block">
+                        Funiro.
+                     </div>
+                     <div class="body-item-footer__content">
+                        <div class="body-item-footer__text">
+                           Worldwide furniture store since 2020. We sell over 1000+ branded products on our website
+                        </div>
+                        <div class="body-item-footer__address _icon-location">
+                           Sawojajar Malang, Indonesia
+                        </div>
+                        <div class="body-item-footer__phone">
+                           <a href="tel:%2B62894563455" class="_icon-phone">+6289 456 3455</a>
+                        </div>
+                        <div class="body-item-footer__link-site">
+                           <a href="#">www.funiro.com</a>
+                        </div>
+                     </div>
+                  </div>
+                  <div class="item-footer__body body-item-footer">
+                     <div class="body-item-footer__tittle toggle-block">
+                        Menu
+                     </div>
+                     <div class="body-item-footer__content">
+                        <ul class="body-item-footer__list">
+                           <li class="body-item-footer__list-item"><a href="#"
+                                 class="body-item-footer__link">Products</a></li>
+                           <li class="body-item-footer__list-item"><a href="#" class="body-item-footer__link">Rooms</a>
+                           </li>
+                           <li class="body-item-footer__list-item"><a href="#"
+                                 class="body-item-footer__link">Inspirations</a></li>
+                           <li class="body-item-footer__list-item"><a href="#" class="body-item-footer__link">About
+                                 Us</a></li>
+                           <li class="body-item-footer__list-item"><a href="#" class="body-item-footer__link">Terms &
+                                 Policy</a></li>
+                        </ul>
+                     </div>
+                  </div>
+               </div>
+            </div>
+            <div class="footer__items item-footer accont-footer">
+               <div class="item-footer__row">
+                  <div class="item-footer__body body-item-footer">
+                     <div class="body-item-footer__tittle toggle-block">
+                        Account
+                     </div>
+                     <div class="body-item-footer__content">
+                        <ul class="body-item-footer__list">
+                           <li class="body-item-footer__list-item"><a href="#" class="body-item-footer__link">My
+                                 Account</a></li>
+                           <li class="body-item-footer__list-item"><a href="#"
+                                 class="body-item-footer__link">Checkout</a>
+                           </li>
+                           <li class="body-item-footer__list-item"><a href="#" class="body-item-footer__link">My
+                                 Cart</a></li>
+                           <li class="body-item-footer__list-item"><a href="#" class="body-item-footer__link">My
+                                 catalog</a></li>
+                        </ul>
+                     </div>
+                  </div>
+                  <div class="item-footer__body body-item-footer">
+                     <div class="body-item-footer__tittle toggle-block">
+                        Stay Connected
+                     </div>
+                     <div class="body-item-footer__content">
+                        <ul class="body-item-footer__list">
+                           <li class="body-item-footer__list-item"><a href="#"
+                                 class="body-item-footer__link">Facebook</a></li>
+                           <li class="body-item-footer__list-item"><a href="#"
+                                 class="body-item-footer__link">Instagram</a>
+                           </li>
+                           <li class="body-item-footer__list-item"><a href="#"
+                                 class="body-item-footer__link">Twitter</a></li>
+                        </ul>
+                     </div>
+                  </div>
+               </div>
+            </div>
+            <div class="footer__items item-footer update-footer">
+               <div class="item-footer__row">
+                  <div class="item-footer__body body-item-footer">
+                     <div class="body-item-footer__tittle toggle-block">
+                        Stay Updated
+                     </div>
+                     <div class="body-item-footer__content">
+                        <form action="#" class="body-item-footer__form" name="email-submit">
+                           <input type="text" placeholder="Enter your email" class="body-item-footer__input">
+                           <button type="submit" class="body-item-footer__btn _icon-send"></button>
+                        </form>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
+   </div>
+</footer>
