Site footer improvement

--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -5,7 +5,7 @@
             <div class="footer__items item-footer menu-footer">
                <div class="item-footer__row">
                   <div class="item-footer__body body-item-footer">
-                     <div class="body-item-footer__tittle toggle-block">
+                     <div class="body-item-footer__tittle">
                         Funiro.
                      </div>
                      <div class="body-item-footer__content">
@@ -23,6 +23,10 @@
                         </div>
                      </div>
                   </div>
+               </div>
+            </div>
+            <div class="footer__items item-footer accont-footer">
+               <div class="item-footer__row">
                   <div class="item-footer__body body-item-footer">
                      <div class="body-item-footer__tittle toggle-block">
                         Menu
@@ -42,10 +46,6 @@
                         </ul>
                      </div>
                   </div>
-               </div>
-            </div>
-            <div class="footer__items item-footer accont-footer">
-               <div class="item-footer__row">
                   <div class="item-footer__body body-item-footer">
                      <div class="body-item-footer__tittle toggle-block">
                         Account
@@ -85,7 +85,7 @@
             <div class="footer__items item-footer update-footer">
                <div class="item-footer__row">
                   <div class="item-footer__body body-item-footer">
-                     <div class="body-item-footer__tittle toggle-block">
+                     <div class="body-item-footer__tittle">
                         Stay Updated
                      </div>
                      <div class="body-item-footer__content">
