--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
 "ogDescription": "Описание страницы для месенджеров"
 })
 
-<body>
+<body id="body">
    <div class="wrapper">
       @@include('html/header.html', {})
       <main class="page">
