--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -1,1 +1,10 @@
-<div class="popup"></div>
+<div id="popup" class="popup">
+   <div class="popup__body">
+      <div class="popup__content">
+         <a href="#" class="popup__close close-popup">X</a>
+         <div class="popup__title">
+            <h4>Вы успешно подписались на нашу рассылку</h4>
+         </div>
+      </div>
+   </div>
+</div>
