--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -5,6 +5,9 @@
          <div class="popup__title">
             <h4>Вы успешно подписались на нашу рассылку</h4>
          </div>
+         <div class="popup__button">
+            OK
+         </div>
       </div>
    </div>
 </div>
