--- a/src/index.html
+++ b/src/index.html
@@ -1,22 +1,109 @@
 <!DOCTYPE html>
 <html lang="ru">
 @@include('html/head.html', {
-"title": "Заголовок страницы",
-"description": "Описание страницы",
-"ogTitle": "Заголовок страницы для месенджеров",
-"ogDescription": "Описание страницы для месенджеров"
+"title": "Главная страница",
+"description": "Описание главной страницы",
+"ogTitle": "Заголовок главной страницы для месенджеров",
+"ogDescription": "Описание главной страницы для месенджеров"
 })
 
 <body id="body">
    <div class="wrapper">
       @@include('html/header.html', {})
       <main class="page">
-
+         <div class="main-slider">
+            <div class="main-slider__container">
+               <div class="main-slider__body">
+                  <div class="main-slider__content content-main-slider">
+                     <div class="content-main-slider__body">
+                        <div class="content-main-slider__tittle">
+                           High-Quality
+                           Furniture Just
+                           For You
+                        </div>
+                        <div class="content-main-slider__text">
+                           Our furniture is made from selected and best quality materials that are suitable for your
+                           dream home
+                        </div>
+                        <a href="#" class="content-main-slider__btn">Shop Now</a>
+                     </div>
+                  </div>
+                  <div class="main-slider__slider slider-main">
+                     <div class="slider-main__controls controls">
+                        <div class="controls__dots"></div>
+                        <div class="controls__buttons">
+                           <button type="button" class="controls__left-btn _icon-arrow-down"></button>
+                           <button type="button" class="controls__right-btn _icon-arrow-down"></button>
+                        </div>
+                     </div>
+                     <div class="slider-main__body">
+                        <div class="slider-main__slider swiper">
+                           <div class="slider-main__wrapper swiper-wrapper">
+                              <div class="slider-main__slide slide-main-slider swiper-slide">
+                                 <div class="slide-main-slider__img">
+                                    <img src="@img/main-slider/1.jpg" alt="Image">
+                                 </div>
+                                 <div class="slide-main-slider__content content-slide">
+                                    <div class="content-slide__body">
+                                       <div class="content-slide__tittle">
+                                          Bohauss
+                                       </div>
+                                       <div class="content-slide__text">Luxury big sofa 2-seat</div>
+                                       <div class="content-slide__price price-slide">
+                                          <div class="price-slide__price">Rp 17.000.000</div>
+                                          <a href="" class="price-slide__link _icon-arrow-link"></a>
+                                       </div>
+                                    </div>
+                                 </div>
+                              </div>
+                              <div class="slider-main__slide slide-main-slider swiper-slide">
+                                 <div class="slide-main-slider__img">
+                                    <img src="@img/main-slider/2.jpg" alt="Image">
+                                 </div>
+                                 <div class="slide-main-slider__content content-slide">
+                                    <div class="content-slide__body">
+                                       <div class="content-slide__tittle">
+                                          Bohauss
+                                       </div>
+                                       <div class="content-slide__text">Luxury big sofa 2-seat</div>
+                                       <div class="content-slide__price price-slide">
+                                          <div class="price-slide__price">Rp 17.000.000</div>
+                                          <a href="" class="price-slide__link _icon-arrow-link"></a>
+                                       </div>
+                                    </div>
+                                 </div>
+                              </div>
+                              <div class="slider-main__slide slide-main-slider swiper-slide">
+                                 <div class="slide-main-slider__img">
+                                    <img src="@img/main-slider/3.jpg" alt="Image">
+                                 </div>
+                                 <div class="slide-main-slider__content content-slide">
+                                    <div class="content-slide__body">
+                                       <div class="content-slide__tittle">
+                                          Bohauss
+                                       </div>
+                                       <div class="content-slide__text">Luxury big sofa 2-seat</div>
+                                       <div class="content-slide__price price-slide">
+                                          <div class="price-slide__price">Rp 17.000.000</div>
+                                          <a href="" class="price-slide__link _icon-arrow-link"></a>
+                                       </div>
+                                    </div>
+                                 </div>
+                              </div>
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
       </main>
       @@include('html/footer.html', {})
       <!--  @@include('html/messengers.html', {}) -->
    </div>
    @@include('html/popup.html', {})
+   <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+   <script src="js/app.js"></script>
 </body>
 
 </html>
