--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
                            Our furniture is made from selected and best quality materials that are suitable for your
                            dream home
                         </div>
-                        <a href="#" class="content-main-slider__btn">Shop Now</a>
+                        <a href="#" class="content-main-slider__btn"><span>Shop Now</span></a>
                      </div>
                   </div>
                   <div class="main-slider__slider slider-main">
