Added breakpoints for main slider

--- a/src/index.html
+++ b/src/index.html
@@ -43,16 +43,15 @@
                                  <div class="slide-main-slider__img">
                                     <img src="@img/main-slider/1.jpg" alt="Image">
                                  </div>
-                                 <div class="slide-main-slider__content content-slide">
-                                    <div class="content-slide__body">
-                                       <div class="content-slide__tittle">
-                                          Bohauss
-                                       </div>
-                                       <div class="content-slide__text">Luxury big sofa 2-seat</div>
-                                       <div class="content-slide__price price-slide">
-                                          <div class="price-slide__price">Rp 17.000.000</div>
-                                          <a href="" class="price-slide__link _icon-arrow-link"></a>
-                                       </div>
+                                 <div data-swiper-parallax-opacity="0" data-swiper-parallax-x="-100%"
+                                    class="slide-main-slider__content content-slide">
+                                    <div class="content-slide__tittle">
+                                       Bohauss
+                                    </div>
+                                    <div class="content-slide__text">Luxury big sofa 2-seat</div>
+                                    <div class="content-slide__price price-slide">
+                                       <div class="price-slide__price">Rp 17.000.000</div>
+                                       <a href="" class="price-slide__link _icon-arrow-link"></a>
                                     </div>
                                  </div>
                               </div>
@@ -60,16 +59,15 @@
                                  <div class="slide-main-slider__img">
                                     <img src="@img/main-slider/2.jpg" alt="Image">
                                  </div>
-                                 <div class="slide-main-slider__content content-slide">
-                                    <div class="content-slide__body">
-                                       <div class="content-slide__tittle">
-                                          Bohauss
-                                       </div>
-                                       <div class="content-slide__text">Luxury big sofa 2-seat</div>
-                                       <div class="content-slide__price price-slide">
-                                          <div class="price-slide__price">Rp 17.000.000</div>
-                                          <a href="" class="price-slide__link _icon-arrow-link"></a>
-                                       </div>
+                                 <div data-swiper-parallax-opacity="0" data-swiper-parallax-x="-100%"
+                                    class="slide-main-slider__content content-slide">
+                                    <div class="content-slide__tittle">
+                                       Bohauss
+                                    </div>
+                                    <div class="content-slide__text">Luxury big sofa 2-seat</div>
+                                    <div class="content-slide__price price-slide">
+                                       <div class="price-slide__price">Rp 17.000.000</div>
+                                       <a href="" class="price-slide__link _icon-arrow-link"></a>
                                     </div>
                                  </div>
                               </div>
@@ -77,22 +75,23 @@
                                  <div class="slide-main-slider__img">
                                     <img src="@img/main-slider/3.jpg" alt="Image">
                                  </div>
-                                 <div class="slide-main-slider__content content-slide">
-                                    <div class="content-slide__body">
-                                       <div class="content-slide__tittle">
-                                          Bohauss
-                                       </div>
-                                       <div class="content-slide__text">Luxury big sofa 2-seat</div>
-                                       <div class="content-slide__price price-slide">
-                                          <div class="price-slide__price">Rp 17.000.000</div>
-                                          <a href="" class="price-slide__link _icon-arrow-link"></a>
-                                       </div>
+                                 <div data-swiper-parallax-opacity="0" data-swiper-parallax-x="-100%"
+                                    class="slide-main-slider__content content-slide">
+                                    <div class="content-slide__tittle">
+                                       Bohauss
+                                    </div>
+                                    <div class="content-slide__text">Luxury big sofa 2-seat</div>
+                                    <div class="content-slide__price price-slide">
+                                       <div class="price-slide__price">Rp 17.000.000</div>
+                                       <a href="" class="price-slide__link _icon-arrow-link"></a>
                                     </div>
                                  </div>
                               </div>
                            </div>
                         </div>
                      </div>
+                     <a href="#" class=" content-main-slider__btn--mobile"><span>Shop
+                           Now</span></a>
                   </div>
                </div>
             </div>
