Added advantages section

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
    <div class="wrapper">
       @@include('html/header.html', {})
       <main class="page">
-         <div class="main-slider">
+         <section class="main-slider">
             <div class="main-slider__container">
                <div class="main-slider__body">
                   <div class="main-slider__content content-main-slider">
@@ -95,7 +95,59 @@
                   </div>
                </div>
             </div>
-         </div>
+         </section>
+         <section class="advantages">
+            <div class="advantages__container">
+               <div class="advantages__row-items items-advantages">
+                  <div class="items-advantages__item">
+                     <div class="items-advantages__item-img">
+                        <img src="@img/svg/advantage_1.svg" alt="advantage">
+                     </div>
+                     <div class="items-advantages__item-title">
+                        High Quality
+                     </div>
+                     <div class="items-advantages__item-text">
+                        crafted from top materials
+                     </div>
+                  </div>
+                  <div class="items-advantages__item">
+                     <div class="items-advantages__item-img">
+                        <img src="@img/svg/advantage_2.svg" alt="advantages">
+                     </div>
+                     <div class="items-advantages__item-title">
+                        Warrany Protection
+                     </div>
+                     <div class="items-advantages__item-text">
+                        Over 2 years
+                     </div>
+                  </div>
+               </div>
+               <div class="advantages__row-items items-advantages">
+                  <div class="items-advantages__item">
+                     <div class="items-advantages__item-img">
+                        <img src="@img/svg/advantage_3.svg" alt="advantages">
+                     </div>
+                     <div class="items-advantages__item-title">
+                        Free Shipping
+                     </div>
+                     <div class="items-advantages__item-text">
+                        Order over 150 $
+                     </div>
+                  </div>
+                  <div class="items-advantages__item">
+                     <div class="items-advantages__item-img">
+                        <img src="@img/svg/advantage_4.svg" alt="advantages">
+                     </div>
+                     <div class="items-advantages__item-title">
+                        24 / 7 Support
+                     </div>
+                     <div class="items-advantages__item-text">
+                        Dedicated support
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </section>
       </main>
       @@include('html/footer.html', {})
       <!--  @@include('html/messengers.html', {}) -->
