Started products block

--- a/src/index.html
+++ b/src/index.html
@@ -148,6 +148,132 @@
                </div>
             </div>
          </section>
+         <section class="products">
+            <div class="products__container">
+               <h2 class="products__tittle _tittle">Our Products</h2>
+               <div class="products__items">
+                  <div class="products__item item-product">
+                     <div class="item-product__img">
+                        <img src="@img/products/syltherine.jpg" alt="Syltherine">
+                     </div>
+                     <div class="item-product__description description-product">
+                        <h5 class="description-product__tittle">Syltherine</h5>
+                        <div class="description-product__text">Stylish cafe chair</div>
+                        <div class="description-product__price price-product">
+                           <div class="price-product__current">Rp 2.500.000</div>
+                           <div class="price-product__old">Rp 3.500.000</div>
+                        </div>
+                     </div>
+                     <div class="item-product__label label-product">
+                        <div class="label-product__sale">-30%</div>
+                        <div class="label-product__new">new</div>
+                     </div>
+                     <div class="item-product__hover hover-product">
+                        <div class="hover-product__actions">
+                           <div class="hover-product__btn">Add to cart</div>
+                           <div class="hover-product__share _icon-share">Share</div>
+                           <div class="hover-product__like _icon-favorite">Share</div>
+                        </div>
+                        <div class="hover-product__look">
+                           <a href="#" class="_icon-arrow-link">Learn more</a>
+                        </div>
+
+                     </div>
+                  </div>
+
+                  <div class="products__item item-product">
+                     <div class="item-product__img">
+                        <img src="@img/products/leviosa.jpg" alt="Leviosa">
+                     </div>
+                     <div class="item-product__description description-product">
+                        <h5 class="description-product__tittle">Leviosa</h5>
+                        <div class="description-product__text">Stylish cafe chair</div>
+                        <div class="description-product__price price-product">
+                           <div class="price-product__current">Rp 2.500.000</div>
+                           <div class="price-product__old"></div>
+                        </div>
+                     </div>
+                     <div class="item-product__label label-product">
+                        <div class="label-product__sale">-30%</div>
+                        <div class="label-product__new">new</div>
+                     </div>
+                     <div class="item-product__hover hover-product">
+                        <div class="hover-product__actions">
+                           <div class="hover-product__btn">Add to cart</div>
+                           <div class="hover-product__share _icon-share">Share</div>
+                           <div class="hover-product__like _icon-favorite">Share</div>
+                        </div>
+                        <div class="hover-product__look">
+                           <a href="#" class="_icon-arrow-link">Learn more</a>
+                        </div>
+
+                     </div>
+                  </div>
+
+                  <div class="products__item item-product">
+                     <div class="item-product__img">
+                        <img src="@img/products/lolito.jpg" alt="Lolito">
+                     </div>
+                     <div class="item-product__description description-product">
+                        <h5 class="description-product__tittle">Lolito</h5>
+                        <div class="description-product__text">Luxury big sofa</div>
+                        <div class="description-product__price price-product">
+                           <div class="price-product__current">Rp 7.000.000</div>
+                           <div class="price-product__old">Rp 14.000.000</div>
+                        </div>
+                     </div>
+                     <div class="item-product__label label-product">
+                        <div class="label-product__sale">-30%</div>
+                        <div class="label-product__new">new</div>
+                     </div>
+                     <div class="item-product__hover hover-product">
+                        <div class="hover-product__actions">
+                           <div class="hover-product__btn">Add to cart</div>
+                           <div class="hover-product__share _icon-share">Share</div>
+                           <div class="hover-product__like _icon-favorite">Share</div>
+                        </div>
+                        <div class="hover-product__look">
+                           <a href="#" class="_icon-arrow-link">Learn more</a>
+                        </div>
+
+                     </div>
+                  </div>
+
+                  <div class="products__item item-product">
+                     <div class="item-product__img">
+                        <img src="@img/products/respira.jpg" alt="Respira">
+                     </div>
+                     <div class="item-product__description description-product">
+                        <h5 class="description-product__tittle">Respira</h5>
+                        <div class="description-product__text">Minimalist fan</div>
+                        <div class="description-product__price price-product">
+                           <div class="price-product__current">Rp 500.000</div>
+                           <div class="price-product__old"></div>
+                        </div>
+                     </div>
+                     <div class="item-product__label label-product">
+                        <div class="label-product__sale">-30%</div>
+                        <div class="label-product__new">new</div>
+                     </div>
+                     <div class="item-product__hover hover-product">
+                        <div class="hover-product__actions">
+                           <div class="hover-product__btn">Add to cart</div>
+                           <div class="hover-product__share _icon-share">Share</div>
+                           <div class="hover-product__like _icon-favorite">Share</div>
+                        </div>
+                        <div class="hover-product__look">
+                           <a href="#" class="_icon-arrow-link">Learn more</a>
+                        </div>
+
+                     </div>
+                  </div>
+
+               </div>
+               <div class="products__footer">
+                  <a href="#" class="products__footer--link">Show More</a>
+               </div>
+            </div>
+         </section>
       </main>
       @@include('html/footer.html', {})
       <!--  @@include('html/messengers.html', {}) -->
