--- a/src/index.html
+++ b/src/index.html
@@ -153,9 +153,9 @@
                <h2 class="products__tittle _tittle">Our Products</h2>
                <div class="products__items">
                   <div class="products__item item-product">
-                     <div class="item-product__img">
+                     <a href="#" class="item-product__img">
                         <img src="@img/products/syltherine.jpg" alt="Syltherine">
-                     </div>
+                     </a>
                      <div class="item-product__description description-product">
                         <h5 class="description-product__tittle">Syltherine</h5>
                         <div class="description-product__text">Stylish cafe chair</div>
@@ -165,26 +165,29 @@
                         </div>
                      </div>
                      <div class="item-product__label label-product">
-                        <div class="label-product__sale">-30%</div>
+                        <div class="label-product__sale active">-30%</div>
                         <div class="label-product__new">new</div>
                      </div>
                      <div class="item-product__hover hover-product">
                         <div class="hover-product__actions">
                            <div class="hover-product__btn">Add to cart</div>
-                           <div class="hover-product__share _icon-share">Share</div>
-                           <div class="hover-product__like _icon-favorite">Share</div>
+                           <div class="hover-product__social">
+                              <a href="#" class="hover-product__share _icon-share">Share</a>
+                              <a href="#" class="hover-product__like _icon-favorite">Like</a>
+                           </div>
                         </div>
-                        <div class="hover-product__look">
-                           <a href="#" class="_icon-arrow-link">Learn more</a>
-                        </div>
+                        <a href="#" class="hover-product__look">
+                           <p>Learn more</p>
+                           <div class="_icon-arrow-link"></div>
+                        </a>
 
                      </div>
                   </div>
 
                   <div class="products__item item-product">
-                     <div class="item-product__img">
+                     <a href="#" class="item-product__img">
                         <img src="@img/products/leviosa.jpg" alt="Leviosa">
-                     </div>
+                     </a>
                      <div class="item-product__description description-product">
                         <h5 class="description-product__tittle">Leviosa</h5>
                         <div class="description-product__text">Stylish cafe chair</div>
@@ -194,26 +197,29 @@
                         </div>
                      </div>
                      <div class="item-product__label label-product">
-                        <div class="label-product__sale">-30%</div>
-                        <div class="label-product__new">new</div>
+                        <div class="label-product__sale active"">-30%</div>
+                        <div class=" label-product__new">new</div>
                      </div>
                      <div class="item-product__hover hover-product">
                         <div class="hover-product__actions">
                            <div class="hover-product__btn">Add to cart</div>
-                           <div class="hover-product__share _icon-share">Share</div>
-                           <div class="hover-product__like _icon-favorite">Share</div>
+                           <div class="hover-product__social">
+                              <a href="#" class="hover-product__share _icon-share">Share</a>
+                              <a href="#" class="hover-product__like _icon-favorite">Like</a>
+                           </div>
                         </div>
-                        <div class="hover-product__look">
-                           <a href="#" class="_icon-arrow-link">Learn more</a>
-                        </div>
+                        <a href="#" class="hover-product__look">
+                           <p>Learn more</p>
+                           <div class="_icon-arrow-link"></div>
+                        </a>
 
                      </div>
                   </div>
 
                   <div class="products__item item-product">
-                     <div class="item-product__img">
+                     <a href="#" class="item-product__img">
                         <img src="@img/products/lolito.jpg" alt="Lolito">
-                     </div>
+                     </a>
                      <div class="item-product__description description-product">
                         <h5 class="description-product__tittle">Lolito</h5>
                         <div class="description-product__text">Luxury big sofa</div>
@@ -223,26 +229,29 @@
                         </div>
                      </div>
                      <div class="item-product__label label-product">
-                        <div class="label-product__sale">-30%</div>
-                        <div class="label-product__new">new</div>
+                        <div class="label-product__sale active"">-50%</div>
+                        <div class=" label-product__new">new</div>
                      </div>
                      <div class="item-product__hover hover-product">
                         <div class="hover-product__actions">
                            <div class="hover-product__btn">Add to cart</div>
-                           <div class="hover-product__share _icon-share">Share</div>
-                           <div class="hover-product__like _icon-favorite">Share</div>
+                           <div class="hover-product__social">
+                              <a href="#" class="hover-product__share _icon-share">Share</a>
+                              <a href="#" class="hover-product__like _icon-favorite">Like</a>
+                           </div>
                         </div>
-                        <div class="hover-product__look">
-                           <a href="#" class="_icon-arrow-link">Learn more</a>
-                        </div>
+                        <a href="#" class="hover-product__look">
+                           <p>Learn more</p>
+                           <div class="_icon-arrow-link"></div>
+                        </a>
 
                      </div>
                   </div>
 
                   <div class="products__item item-product">
-                     <div class="item-product__img">
+                     <a href="#" class="item-product__img">
                         <img src="@img/products/respira.jpg" alt="Respira">
-                     </div>
+                     </a>
                      <div class="item-product__description description-product">
                         <h5 class="description-product__tittle">Respira</h5>
                         <div class="description-product__text">Minimalist fan</div>
@@ -252,27 +261,31 @@
                         </div>
                      </div>
                      <div class="item-product__label label-product">
-                        <div class="label-product__sale">-30%</div>
-                        <div class="label-product__new">new</div>
+                        <div class="label-product__sale"></div>
+                        <div class="label-product__new active"">new</div>
                      </div>
-                     <div class="item-product__hover hover-product">
-                        <div class="hover-product__actions">
-                           <div class="hover-product__btn">Add to cart</div>
-                           <div class="hover-product__share _icon-share">Share</div>
-                           <div class="hover-product__like _icon-favorite">Share</div>
-                        </div>
-                        <div class="hover-product__look">
-                           <a href="#" class="_icon-arrow-link">Learn more</a>
-                        </div>
+                     <div class=" item-product__hover hover-product">
+                           <div class="hover-product__actions">
+                              <div class="hover-product__btn">Add to cart</div>
+                              <div class="hover-product__social">
+                                 <a href="#" class="hover-product__share _icon-share">Share</a>
+                                 <a href="#" class="hover-product__like _icon-favorite">Like</a>
+                              </div>
+                           </div>
+                           <a href="#" class="hover-product__look">
 
+                              <p>Learn more</p>
+                              <div class="_icon-arrow-link"></div>
+                           </a>
+
+                        </div>
                      </div>
+
                   </div>
-
+                  <div class="products__footer">
+                     <a href="#" class="products__footer--link">Show More</a>
+                  </div>
                </div>
-               <div class="products__footer">
-                  <a href="#" class="products__footer--link">Show More</a>
-               </div>
-            </div>
          </section>
       </main>
       @@include('html/footer.html', {})
