Added products loading & worked whith cart (Created adding зкщвгсеы to the cart and loading prices from json file)

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -50,8 +50,7 @@
                <a href="#" class="actions__favorite _icon-favorite"></a>
                <div class="actions__cart cart-header">
                   <a href="" class="cart-header__icon _icon-Cart"></a>
-                  <ul class="cart__header-list">
-                     <li class="cart__header-item"></li>
+                  <ul class="cart-header__header-list cart-list">
                   </ul>
                   </button>
                </div>
