--- a/src/index.html
+++ b/src/index.html
@@ -152,7 +152,8 @@
             <div class="products__container">
                <h2 class="products__tittle _tittle">Our Products</h2>
                <div class="products__items">
-                  <div class="products__item item-product">
+
+                  <div data-id="1" class="products__item item-product">
                      <a href="#" class="item-product__img">
                         <img src="@img/products/syltherine.jpg" alt="Syltherine">
                      </a>
@@ -160,8 +161,8 @@
                         <h5 class="description-product__tittle">Syltherine</h5>
                         <div class="description-product__text">Stylish cafe chair</div>
                         <div class="description-product__price price-product">
-                           <div class="price-product__current">Rp 2.500.000</div>
-                           <div class="price-product__old">Rp 3.500.000</div>
+                           <div class="price-product__current">EUR 2.500</div>
+                           <div class="price-product__old">EUR 3.500</div>
                         </div>
                      </div>
                      <div class="item-product__label label-product">
@@ -184,7 +185,7 @@
                      </div>
                   </div>
 
-                  <div class="products__item item-product">
+                  <div data-id="2" class="products__item item-product">
                      <a href="#" class="item-product__img">
                         <img src="@img/products/leviosa.jpg" alt="Leviosa">
                      </a>
@@ -192,7 +193,7 @@
                         <h5 class="description-product__tittle">Leviosa</h5>
                         <div class="description-product__text">Stylish cafe chair</div>
                         <div class="description-product__price price-product">
-                           <div class="price-product__current">Rp 2.500.000</div>
+                           <div class="price-product__current">EUR 2.500</div>
                            <div class="price-product__old"></div>
                         </div>
                      </div>
@@ -216,7 +217,7 @@
                      </div>
                   </div>
 
-                  <div class="products__item item-product">
+                  <div data-id="3" class="products__item item-product">
                      <a href="#" class="item-product__img">
                         <img src="@img/products/lolito.jpg" alt="Lolito">
                      </a>
@@ -224,8 +225,8 @@
                         <h5 class="description-product__tittle">Lolito</h5>
                         <div class="description-product__text">Luxury big sofa</div>
                         <div class="description-product__price price-product">
-                           <div class="price-product__current">Rp 7.000.000</div>
-                           <div class="price-product__old">Rp 14.000.000</div>
+                           <div class="price-product__current">EUR 7.000</div>
+                           <div class="price-product__old">EUR 14.000</div>
                         </div>
                      </div>
                      <div class="item-product__label label-product">
@@ -248,7 +249,7 @@
                      </div>
                   </div>
 
-                  <div class="products__item item-product">
+                  <div data-id="4" class="products__item item-product">
                      <a href="#" class="item-product__img">
                         <img src="@img/products/respira.jpg" alt="Respira">
                      </a>
@@ -256,7 +257,7 @@
                         <h5 class="description-product__tittle">Respira</h5>
                         <div class="description-product__text">Minimalist fan</div>
                         <div class="description-product__price price-product">
-                           <div class="price-product__current">Rp 500.000</div>
+                           <div class="price-product__current">EUR 500</div>
                            <div class="price-product__old"></div>
                         </div>
                      </div>
