Added makeOrder function

--- a/src/index.html
+++ b/src/index.html
@@ -293,6 +293,7 @@
       <!--  @@include('html/messengers.html', {}) -->
    </div>
    @@include('html/popup.html', {})
+   @@include('html/cartPopup.html', {})
    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
    <script src="js/app.js"></script>
 </body>
