Finished developing the shopping cart

--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -93,7 +93,7 @@
                            <input type="text" name="email" placeholder="Enter your email"
                               class="body-item-footer__input">
                            <div class="body-item-footer__error error-input">ошибка</div>
-                           <button type="submit" data-popup="popup"
+                           <button type="submit" data-popup-id="emailPopup"
                               class="body-item-footer__btn _icon-send popup-link"></button>
                         </form>
                      </div>
