--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -1,4 +1,4 @@
-<div id="popup" class="popup">
+<div id="emailPopup" class="popup">
    <div class="popup__body">
       <div class="popup__content">
          <a href="#" class="popup__close close-popup">X</a>
