Added tooms block. Updated scss mixin 'adaptive value'

--- a/src/index.html
+++ b/src/index.html
@@ -288,6 +288,96 @@
                   </div>
                </div>
          </section>
+         <section class="rooms">
+            <div class="rooms__container">
+               <div class="rooms__content content-rooms">
+                  <div class="content-rooms__body">
+                     <div class="content-rooms__title">50+ Beautiful rooms inspiration</div>
+                     <div class="content-rooms__text">Our designer already made a lot of beautiful prototipe of rooms
+                        that inspire you</div>
+                     <a href="#" class="content-rooms__btn">Explore More</a>
+                  </div>
+               </div>
+               <div class="rooms__slider-body">
+                  <div class="rooms__slider rooms-slider swiper">
+                     <div class="rooms__slider-wraper swiper-wrapper">
+                        <div class="rooms__slider-slide slide-rooms swiper-slide">
+                           <div class="slide-rooms__img">
+                              <img src="@img/rooms/1.jpg" alt="Room 1">
+                           </div>
+                           <div data-swiper-parallax-opacity="0" data-swiper-parallax-y="100%"
+                              class="slide-rooms__description ">
+                              <div class="slide-rooms__description-content">
+                                 <div class="slide-rooms__description-text slide-rooms-text">
+                                    <div class="slide-rooms-text__slide-number">01</div>
+                                    <div class="slide-rooms-text__dash"></div>
+                                    <div class="slide-rooms-text__text">Bed Room</div>
+                                 </div>
+                                 <div class="slide-rooms__description-title">
+                                    Inner Peace
+                                 </div>
+                              </div>
+                              <div class="slide-rooms__description-btn">
+                                 <a href="#" class="slide-rooms__description-link _icon-arrow-link"></a>
+                              </div>
+                           </div>
+                        </div>
+
+                        <div class="rooms__slider-slide slide-rooms swiper-slide">
+                           <div class="slide-rooms__img">
+                              <img src="@img/rooms/2.jpg" alt="Room 2">
+                           </div>
+                           <div data-swiper-parallax-opacity="0" data-swiper-parallax-y="100%"
+                              class="slide-rooms__description ">
+                              <div class="slide-rooms__description-content">
+                                 <div class="slide-rooms__description-text slide-rooms-text">
+                                    <div class="slide-rooms-text__slide-number">02</div>
+                                    <div class="slide-rooms-text__dash"></div>
+                                    <div class="slide-rooms-text__text">Kitchen Room</div>
+                                 </div>
+                                 <div class="slide-rooms__description-title">
+                                    Kitchen Comfort
+                                 </div>
+                              </div>
+                              <div class="slide-rooms__description-btn">
+                                 <a href="#" class="slide-rooms__description-link _icon-arrow-link"></a>
+                              </div>
+                           </div>
+                        </div>
+                        <div class="rooms__slider-slide slide-rooms swiper-slide">
+                           <div class="slide-rooms__img">
+                              <img src="@img/rooms/3.jpg" alt="Room 3">
+                           </div>
+                           <div data-swiper-parallax-opacity="0" data-swiper-parallax-y="100%"
+                              class="slide-rooms__description ">
+                              <div class="slide-rooms__description-content">
+                                 <div class="slide-rooms__description-text slide-rooms-text">
+                                    <div class="slide-rooms-text__slide-number">03</div>
+                                    <div class="slide-rooms-text__dash"></div>
+                                    <div class="slide-rooms-text__text">Dresser</div>
+                                 </div>
+                                 <div class="slide-rooms__description-title">
+                                    Dresser Comfort
+                                 </div>
+                              </div>
+                              <div class="slide-rooms__description-btn">
+                                 <a href="#" class="slide-rooms__description-link _icon-arrow-link"></a>
+                              </div>
+                           </div>
+
+                        </div>
+                     </div>
+                     <div class="slider-main__controls controls">
+                        <div class="controls__dots"></div>
+                     </div>
+                  </div>
+                  <div class="controls__buttons">
+                     <button type="button" class="controls__left-btn _icon-arrow-down"></button>
+                     <button type="button" class="controls__right-btn _icon-arrow-down"></button>
+                  </div>
+               </div>
+            </div>
+         </section>
       </main>
       @@include('html/footer.html', {})
       <!--  @@include('html/messengers.html', {}) -->
