Added tips block

--- a/src/index.html
+++ b/src/index.html
@@ -378,6 +378,65 @@
                </div>
             </div>
          </section>
+         <section class="tips">
+            <div class="tips__container">
+               <h2 class="tips__title _tittle">Tips & Tricks</h2>
+               <div class="tips__slider slider-tips">
+                  <div class="slider-tips__swiper slider-tips__body swiper">
+                     <div class="slider-tips__wrapper swiper-wrapper">
+                        <div class="slider-tips__slide tips-slide swiper-slide">
+                           <div class="tips-slide__body">
+                              <div class="tips-slide__img">
+                                 <img src="@img/tips/1.jpg" alt="Tip 1">
+                              </div>
+                              <div class="tips-slide__content">
+                                 <h3 class="tips-slide__title">How to create a living room to love</h3>
+                                 <div class="tips-slide__date">
+                                    20 jan 2020
+                                 </div>
+                              </div>
+                           </div>
+                        </div>
+
+                        <div class="slider-tips__slide tips-slide swiper-slide">
+                           <div class="tips-slide__body">
+                              <div class="tips-slide__img">
+                                 <img src="@img/tips/2.jpg" alt="Tip 1">
+                              </div>
+                              <div class="tips-slide__content">
+                                 <h3 class="tips-slide__title">Solution for clean look working space</h3>
+                                 <div class="tips-slide__date">
+                                    10 jan 2020
+                                 </div>
+                              </div>
+                           </div>
+                        </div>
+
+                        <div class="slider-tips__slide tips-slide swiper-slide">
+                           <div class="tips-slide__body">
+                              <div class="tips-slide__img">
+                                 <img src="@img/tips/3.jpg" alt="Tip 1">
+                              </div>
+                              <div class="tips-slide__content">
+                                 <h3 class="tips-slide__title">Make your cooking activity more fun with good setup</h3>
+                                 <div class="tips-slide__date">
+                                    20 jan 2020
+                                 </div>
+                              </div>
+                           </div>
+                        </div>
+                     </div>
+                     <div class="slider-main__controls controls">
+                        <div class="controls__dots"></div>
+                     </div>
+                  </div>
+                  <div class="controls__buttons">
+                     <button type="button" class="controls__left-btn _icon-arrow-down"></button>
+                     <button type="button" class="controls__right-btn _icon-arrow-down"></button>
+                  </div>
+               </div>
+            </div>
+         </section>
       </main>
       @@include('html/footer.html', {})
       <!--  @@include('html/messengers.html', {}) -->
